# FromZ

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: DemoHead.GoZ  DemoHeadOut.GoZ  Dog.GoZ  DogOut.GoZ
src/: readGoZFile.cpp  readGoZFile.h  writeGoZFile.cpp  writeGoZFile.h
